2000-11-08  John Harper  <jsh@eazel.com>

	* version 0.33

2000-11-06  John Harper  <jsh@eazel.com>

	* group.jl, shell.jl: fixed some bugs introduced by the change
	to refresh groups after slot commits

2000-11-02  John Harper  <jsh@eazel.com>

	* group.jl (fetch-group, select-group): added keyword parameter
	FORCE that overrides certain checks

	(refresh-groups-for-slots): new exported function; given a list
	of slots it will resync any groups that contain any of these
	slots

	* apply.jl (do-apply): call refresh-groups-for-slots after
	committing any changes

2000-11-01  John Harper  <jsh@eazel.com>

	* group.jl: some internal reorganization (may help reloading
	group info..)

2000-10-26  John Harper  <jsh@eazel.com>

	* widgets/command.jl: now supports #:user-level's in commands

2000-10-20  John Harper  <jsh@eazel.com>

	* widgets/command.jl: support (but currently ignore)
	user-levels associated with commands

	* user-level.jl (user-level-is-appropriate-p): new function

2000-10-10  John Harper  <john@dcs.warwick.ac.uk>

	* apply.jl (apply-changes-for): catch errors from
	wm-apply-changes and display them in a dialog after reverting
	the changed slots

2000-09-25  John Harper  <john@dcs.warwick.ac.uk>

	* widgets/keymap.jl (make-keymap:binding-item): add a `Key:'
	label to the event widget

	* widgets/event.jl (make-event-item): don't prefix the widget
	with a `Key:' label, it's more useful without it

	* layout.jl (document-slot): handle adding any tooltip embedded
	in the slots documentation string

2000-09-20  John Harper  <john@dcs.warwick.ac.uk>

	* version 0.31

2000-09-12  John Harper  <john@dcs.warwick.ac.uk>

	* shell.jl (initialize-shell): unless creating a plug, put the
	root widget inside a raised frame

2000-09-11  John Harper  <john@dcs.warwick.ac.uk>

	* slot.jl, shell.jl, main.jl.in, group.jl, ChangeLog: 
	* layouts/keymaps.jl: 
	* widgets/match-window.jl, widgets/keymap.jl,
	widgets/frame-style.jl, widgets/command.jl: 
