@@ -1,3 +1,9 @@
+2000-11-14  John Harper  <jsh@eazel.com>
+
+	* widgets/workspace-geometry.jl (monitor-pixbuf-file): search
+	load-path for the `../monitor.png' file, instead of just
+	assuming that it's relative to the first item of the list
+
 2000-11-08  John Harper  <jsh@eazel.com>
 
 	* version 0.33
